[metadata]
name = aiinpy
version = 0.0.19
author = Sean Mabli
author_email = seanmabli4@gmail.com
description = A neural network building, training, and testing package
long_description = file: README.md
long_description_content_type = text/markdown ; charset=UTF-8
home_page = https://github.com/seanmabli/aiinpy
project_urls =
    Bug Tracker = https://github.com/seanmabli/aiinpy/issues
    Documentation = https://aiinpy.org
    Source Code = https://github.com/seanmabli/aiinpy
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English

[options]
packages = find:
include_package_data = True
install_requires = numpy